--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 weights/yolov7-tiny.engine filter=lfs diff=lfs merge=lfs -text
 weights/yolov7-tiny.pt filter=lfs diff=lfs merge=lfs -text
 weights/yolov7-tiny.wts filter=lfs diff=lfs merge=lfs -text
+weights/ filter=lfs diff=lfs merge=lfs -text
+weights/lp_character.pt filter=lfs diff=lfs merge=lfs -text
+weights/lp_character.wts filter=lfs diff=lfs merge=lfs -text
+weights/lp_character.engine filter=lfs diff=lfs merge=lfs -text
